--- a/first-page.html
+++ b/first-page.html
@@ -76,6 +76,12 @@
                            Нашим приоритетом всегда были доверительные отношения
                            с заказчиками на взаимовыгодной основе.
                         </p>
+                        <p>
+                           <span
+                              ><span>Вадим Бакеев</span> - генеральный директор компании
+                              'Бакеев Групп'</span
+                           >
+                        </p>
                         <a
                            class="review"
                            target="_blank"
