--- a/first-page.html
+++ b/first-page.html
@@ -107,7 +107,7 @@
                   <div class="work-diskription work-diskription-hidden">
                      <p>
                         Проектирование ландшафта участка, включает в себя
-                        множество чертежей о планов. каждый из которых – должен
+                        множество чертежей и планов, каждый из которых  должен
                         соответствовать вашим желаниям и представлениям о
                         прекрасном.<br />
                         - Генеральный план<br />
@@ -132,7 +132,7 @@
                   </div>
                   <div class="work-diskription work-diskription-hidden">
                      <p>
-                        Устройство покрытий. Один из самых важных элементов
+                        Устройство покрытий - один из самых важных элементов
                         ландшафтного строительства, который на долгие годы
                         определяет не только красивый внешний вид участка, но и
                         удобство его использования<br />
@@ -214,7 +214,7 @@
                      <p>
                         Любой участок можно приподнять, занизить, оформить
                         террасами. Обыграть по мотивам гольфполя, лесной лужайки
-                        с ручьем , или озерцом.<br />
+                        с ручьем  или озерцом.<br />
                         - Отсыпка, понижение, формирование рельефа.
                      </p>
                   </div>
@@ -231,8 +231,8 @@
                   <div class="work-diskription work-diskription-hidden">
                      <p>
                         Устройство подпорных стенок и лестниц - oчень
-                        распространенный элемент , ландшафтного строительства.
-                        Придает шарм участка, но также часто выполняет
+                        распространенный элемент  ландшафтного строительства.
+                        Он не только придает шарм участку, но также часто выполняет
                         утилитарные функции.<br />
                         - Устройство подпорных стенок и лестниц из бетона,
                         натурального камня, бруса, ДПК.
