--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </div>
             
 
-               <a class="index-link index-link-top" href="/first-page.html">
+               <a class="index-link index-link-top"href="/first-page.html" >
                   <div class="index-link-div">Войти на сайт<br /></div>
                </a>
-               <a class="index-link index-link-down" href="/first-page.html">
+               <a class="index-link index-link-down" href="tel:+79818721063">
                   <div class="index-link-div">Позвоните нам</div>
                </a>
             
