--- a/ourworks.html
+++ b/ourworks.html
@@ -51,9 +51,9 @@
                <div class="ourworks-list">
                   <a href="/works/boksitogorsk.html" class="item-link">
                      <div class="ourworks-item">
-                        <div class="item-logo">
+                        <!-- <div class="item-logo">
                            <img src="/image/five/android-chrome-512x512.png" alt="" />
-                        </div>
+                        </div> -->
                         <div class="item-img">
                            <img
                               src="/image/boksitogorsk/boksit-min/boksit-5.jpg"
@@ -66,9 +66,9 @@
                   </a>
                   <a href="/works/hizelki.html" class="item-link">
                      <div class="ourworks-item">
-                        <div class="item-logo">
+                        <!-- <div class="item-logo">
                            <img src="/image/five/android-chrome-512x512.png" alt="" />
-                        </div>
+                        </div> -->
                         <div class="item-img">
                            <img
                               src="/image/hizelki/hiz-min/hiz-3.JPEG"
@@ -81,9 +81,9 @@
                   </a>
                   <a href="/works/lednevo.html" class="item-link">
                      <div class="ourworks-item">
-                        <div class="item-logo">
+                        <!-- <div class="item-logo">
                            <img src="/image/five/android-chrome-512x512.png" alt="" />
-                        </div>
+                        </div> -->
                         <div class="item-img">
                            <img
                               src="/image/lednevo/l-4.jpg"
@@ -96,9 +96,9 @@
                   </a>
                   <a href="/works/house_slose_see.html" class="item-link">
                      <div class="ourworks-item">
-                        <div class="item-logo">
+                        <!-- <div class="item-logo">
                            <img src="/image/five/android-chrome-512x512.png" alt="" />
-                        </div>
+                        </div> -->
                         <div class="item-img">
                            <img
                               src="/image/house_close_see/h-min/h-6.JPG"
@@ -111,9 +111,9 @@
                   </a>
                   <a href="/works/kiskelovo.html" class="item-link">
                      <div class="ourworks-item">
-                        <div class="item-logo">
+                        <!-- <div class="item-logo">
                            <img src="/image/five/android-chrome-512x512.png" alt="" />
-                        </div>
+                        </div> -->
                         <div class="item-img">
                            <img
                               src="/image/kiskelovo/kis-min/kis-2.JPEG"
@@ -126,9 +126,9 @@
                   </a>
                   <a href="/works/novo_toksovo.html" class="item-link">
                      <div class="ourworks-item">
-                        <div class="item-logo">
+                        <!-- <div class="item-logo">
                            <img src="/image/five/android-chrome-512x512.png" alt="" />
-                        </div>
+                        </div> -->
                         <div class="item-img">
                            <img
                               src="/image/new_toksovo/nt-min/nt-1.JPEG"
@@ -141,9 +141,9 @@
                   </a>
                   <a href="/works/ozerki.html" class="item-link">
                      <div class="ourworks-item">
-                        <div class="item-logo">
+                        <!-- <div class="item-logo">
                            <img src="/image/five/android-chrome-512x512.png" alt="" />
-                        </div>
+                        </div> -->
                         <div class="item-img">
                            <img src="/image/ozerki/o-min/o-7.jpg" alt="" />
                         </div>
@@ -154,24 +154,24 @@
                   </a>
                   <a href="/works/strawberry.html" class="item-link">
                      <div class="ourworks-item">
-                        <div class="item-logo">
+                        <!-- <div class="item-logo">
                            <img src="/image/five/android-chrome-512x512.png" alt="" />
-                        </div>
+                        </div> -->
                         <div class="item-img">
                            <img
                               src="/image/strawberry_fields/st-min/st-3.jpg"
                               alt="" />
                         </div>
                         <div class="item-name">
-                           <h2>Земл. поляна</h2>
+                           <h2>Земл поляна</h2>
                         </div>
                      </div>
                   </a>
                   <a href="/works/strelna.html" class="item-link">
                      <div class="ourworks-item">
-                        <div class="item-logo">
+                        <!-- <div class="item-logo">
                            <img src="/image/five/android-chrome-512x512.png" alt="" />
-                        </div>
+                        </div> -->
                         <div class="item-img">
                            <img src="/image/strelna/st-min/str-6.jpg" alt="" />
                         </div>
