--- a/works/lednevo.html
+++ b/works/lednevo.html
@@ -30,7 +30,7 @@
                </a>
                <ul class="menu" id="menu">
                   <li>
-                     <a href="index.html">Home</a>
+                     <a href="/index.html">Home</a>
                   </li>
                   <li>
                      <a href="/first-page.html">Главная страница</a>
@@ -46,6 +46,11 @@
       <div class="popup" id="popup"></div>
 
       <main class="main">
+         <a class="back" href="/ourworks.html">
+            <div>
+               <p>Назад</p>
+            </div>
+         </a>
          <div class="container">
             <div class="portfolio">
                <div class="portfolio-wrapper">
