--- a/works/novo_toksovo.html
+++ b/works/novo_toksovo.html
@@ -47,6 +47,11 @@
       <div class="popup" id="popup"></div>
 
       <main class="main">
+         <a class="back" href="/ourworks.html">
+            <div>
+               <p>Назад</p>
+            </div>
+         </a>
          <div class="container">
             <div class="portfolio">
                <div class="portfolio-wrapper">
