--- a/first-page.html
+++ b/first-page.html
@@ -10,7 +10,7 @@
          type="image/png"
          sizes="32x32"
          href="/image/five/favicon-32x32.png" />
-      <title>Бакеев Групп</title>
+      <title>Главная страница</title>
    </head>
    <body>
       <nav class="navbar">
