--- a/works/house_slose_see.html
+++ b/works/house_slose_see.html
@@ -10,7 +10,7 @@
       <link
          rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-      <title>House_close_see</title>
+      <title>Дом у моря</title>
    </head>
    <body>
       <nav class="navbar">
