--- a/works/novo_toksovo.html
+++ b/works/novo_toksovo.html
@@ -14,7 +14,7 @@
       <link
          rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-      <title>Novo Toksovo</title>
+      <title>Новое Токсово</title>
    </head>
    <body>
       <nav class="navbar">
