--- a/ourworks.html
+++ b/ourworks.html
@@ -10,7 +10,7 @@
       <link
          rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-      <title>Бакеев Групп</title>
+      <title>Наши работы</title>
    </head>
    <body>
       <nav class="navbar">
