--- a/works/hizelki.html
+++ b/works/hizelki.html
@@ -14,7 +14,7 @@
       <link
          rel="stylesheet"
          href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-      <title>Hizelki</title>
+      <title>Хязельки</title>
    </head>
    <body>
       <nav class="navbar">
