--- a/first-page.html
+++ b/first-page.html
@@ -32,10 +32,13 @@
                   </li>
                   <li></li>
                   <li>
-                     <a class="active" href="#">Главная страница</a>
+                     <a class="active" href="#">О нашей компании</a>
                   </li>
                   <li>
                      <a href="/ourworks.html">Наши работы</a>
+                  </li>
+                  <li>
+                     <a href="/contacts.html">Контакты</a>
                   </li>
                </ul>
             </div>
