--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                <a class="index-link index-link-down" href="tel:+79818721063">
                   <div class="index-link-div">Позвоните нам</div>
                </a>
+               <a href="/contacts.html">234234223</a>
                
             
          </div>
