--- a/ourworks.html
+++ b/ourworks.html
@@ -40,6 +40,9 @@
                   <li>
                      <a class="active" href="/ourworks.html">Наши работы</a>
                   </li>
+                  <li>
+                     <a href="/contacts.html">Контакты</a>
+                  </li>
                </ul>
             </div>
          </div>
