--- a/works/ozerki.html
+++ b/works/ozerki.html
@@ -33,10 +33,13 @@
                      <a href="index.html">Home</a>
                   </li>
                   <li>
-                     <a href="/first-page.html">Главная страница</a>
+                     <a href="/first-page.html">О нашей компании</a>
                   </li>
                   <li>
                      <a class="active" href="/ourworks.html">Наши работы</a>
+                  </li>
+                  <li>
+                     <a href="/contacts.html">Контакты</a>
                   </li>
                   
                </ul>
