--- a/works/house_slose_see.html
+++ b/works/house_slose_see.html
@@ -33,12 +33,15 @@
                      <a href="index.html">Home</a>
                   </li>
                   <li>
-                     <a href="/first-page.html">Главная страница</a>
+                     <a href="/first-page.html">О нашей компании</a>
                   </li>
                   <li>
                      <a class="active" href="/ourworks.html">Наши работы</a>
                   </li>
-                  >
+                  <li>
+                     <a href="/contacts.html">Контакты</a>
+                  </li>
+                  
                </ul>
             </div>
          </div>
